# sea-orm-starter

./: .env.example  Cargo.toml  Makefile  README.md  client.http  compose.yml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  pull_request_template.md
containers/rust/: Dockerfile
migration/: Cargo.toml
migration/src/: lib.rs  m20241231_132216_create_user_table.rs
src/: main.rs
src/entities/: user.rs
